Добавлены стили серой кнопке -показать все- и серому блоку контактов

--- a/source/less/btn.less
+++ b/source/less/btn.less
@@ -18,3 +18,15 @@
     color: rgba(@secondary-text-color, 0.3);
   }
 }
+.btn--grey {
+  color: @main-text-color;
+  background-color: @secondary-color;
+  &:hover,
+  &:focus {
+    background-color: #ebebeb;
+  }
+  &:active {
+    color: rgba(@main-text-color, 0.3);
+    background-color: #ebebeb;
+  }
+}
