--- a/source/less/contacts.less
+++ b/source/less/contacts.less
@@ -2,6 +2,9 @@
   padding: 29px 0 24px;
   background-color: #ffffff;
   line-height: 20px;
+  &--grey {
+    background-color: @secondary-color;
+  }
 }
 .contacts__title {
   margin: 0;
