Добавлены пустые строки межджу правилами и кавычки в названии шрифта

--- a/source/less/menu.less
+++ b/source/less/menu.less
@@ -1,5 +1,5 @@
 .menu {
-  font-family: "Oswald-med", Arial, sans-serif;
+  font-family: "Oswald-med", "Arial", sans-serif;
   font-size: 20px;
   line-height: 20px;
   color: @heading-color;
