--- a/source/less/section-title.less
+++ b/source/less/section-title.less
@@ -1,5 +1,5 @@
 .section-title {
-  font-family: "Oswald-reg", Arial, sans-serif;
+  font-family: "Oswald-reg", "Arial", sans-serif;
   font-size: 36px;
   line-height: 60px;
   color: @heading-color;
