--- a/source/less/usage.less
+++ b/source/less/usage.less
@@ -2,15 +2,18 @@
   margin: 0;
   margin-bottom: 23px;
 }
+
 .usage__list {
   margin: 0;
   padding: 0;
   list-style: none;
 }
+
 .usage__item {
   margin-bottom: 20px;
   padding-left: 80px;
 }
+
 .usage__icon {
   display: block;
   width: 60px;
@@ -18,16 +21,20 @@
   background-color: @main-color;
   background-repeat: no-repeat;
   background-position: center;
+
   &--leaf {
     background-image: url("../img/advantage-leaf@1x.png");
   }
+
   &--powder {
     background-image: url("../img/advantage-powder@1x.png");
   }
+
   &--dinning {
-    background-image: url(../img/advantage-dining@1x.png);
+    background-image: url("../img/advantage-dining@1x.png");
   }
+
   &--clock {
-    background-image: url(../img/advantage-clock@1x.png);
+    background-image: url("../img/advantage-clock@1x.png");
   }
 }
