--- a/source/less/catalog.less
+++ b/source/less/catalog.less
@@ -1,49 +1,59 @@
 .catalog {
   padding: 20px 0 25px;
 }
+
 .catalog__title {
   margin: 0;
   padding: 20px;
   padding-top: 0;
   border-bottom: 1px solid #e6e6e6;
 }
+
 .catalog__list {
   margin: 0;
   padding: 0;
   list-style: none;
 }
+
 .catalog__item {
   padding: 0 20px 24px;
   border-bottom: 1px solid #e6e6e6;
 }
+
 .catalog__product-photo {
   width: 140px;
   height: 144px;
 }
+
 .catalog__product-title {
   margin: 0;
   margin-bottom: 17px;
-  font-family: "Oswald-reg", Arial, sans-serif;
+  font-family: "Oswald-reg", "Arial", sans-serif;
   font-size: 16px;
   line-height: 20px;
   color: @heading-color;
   text-transform: uppercase;
 }
+
 .catalog__product-info {
   width: 140px;
   font-size: 12px;
   line-height: 16px;
 }
+
 .catalog__product-argument {
   text-align: left;
 }
+
 .catalog__product-value {
   text-align: right;
 }
+
 .catalog__all-products {
   padding: 80px 20px 25px;
   border-bottom: 1px solid #e6e6e6;
 }
+
 .catalog__more-goods-title {
   margin: 0;
   margin-bottom: 7px;
@@ -53,6 +63,7 @@
   color: @heading-color;
   text-transform: uppercase;
 }
+
 .catalog__more-goods-description {
   margin: 0;
   margin-bottom: 20px;
