--- a/source/less/nutrition-programs.less
+++ b/source/less/nutrition-programs.less
@@ -3,11 +3,13 @@
   padding: 0;
   list-style: none;
 }
+
 .nutrition-programs__item {
   margin-bottom: 20px;
   padding: 33px 20px 23px;
   background-color: @secondary-color;
 }
+
 .nutrition-programs__item-title {
   margin: 0;
   margin-bottom: 30px;
@@ -18,20 +20,23 @@
   color: @heading-color;
   text-transform: uppercase;
 }
+
 .nutrition-programs__item-info {
   margin: 0;
   margin-bottom: 20px;
   padding-bottom: 25px;
   border-bottom: 1px solid #d9d9d9;
 }
+
 .nutrition-programs__btn {
   padding-right: 38px;
-  font-family: "Oswald-reg", Arial, sans-serif;
+  font-family: "Oswald-reg", "Arial", sans-serif;
   color: @heading-color;
   font-size: 16px;
   line-height: 16px;
   text-transform: uppercase;
   text-decoration: none;
+
   &:active {
     color: rgba(@heading-color, 0.3);
   }
