--- a/source/less/promo.less
+++ b/source/less/promo.less
@@ -1,8 +1,9 @@
 .promo {
   padding-bottom: 20px;
-  font-family: "Oswald-reg", Arial, sans-serif;
+  font-family: "Oswald-reg", "Arial", sans-serif;
   text-align: center;
 }
+
 .promo__text {
   padding: 29px 20px 139px;
   color: @secondary-text-color;
@@ -11,18 +12,21 @@
   background-repeat: no-repeat;
   background-position: center;
 }
+
 .promo__title {
   margin: 0;
   margin-bottom: 20px;
   font-size: 36px;
   line-height: 36px;
 }
+
 .promo__intro {
   margin-bottom: 29px;
   font-size: 14px;
   line-height: 14px;
   text-transform: uppercase;
 }
+
 .promo__img {
   width: 280px;
   height: 271px;
