--- a/source/less/style.less
+++ b/source/less/style.less
@@ -16,18 +16,18 @@
 @font-face {
   font-family: "Oswald-reg";
   src: url("../fonts/oswaldregular.woff"),
-      url("../fonts/oswaldregular.woff2");
+    url("../fonts/oswaldregular.woff2");
   font-weight: 400;
 }
 @font-face {
   font-family: "Oswald-med";
   src: url("../fonts/oswaldmedium.woff"),
-      url("../fonts/oswaldmedium.woff2");
+    url("../fonts/oswaldmedium.woff2");
   font-weight: medium;
 }
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
   color: @main-text-color;
