--- a/source/less/catalog.less
+++ b/source/less/catalog.less
@@ -57,7 +57,7 @@
 .catalog__more-goods-title {
   margin: 0;
   margin-bottom: 7px;
-  font-family: "Oswald-reg", Arial, sans-serif;
+  font-family: "Oswald-reg", "Arial", sans-serif;
   font-size: 16px;
   line-height: 20px;
   color: @heading-color;
