--- a/source/less/nutrition-programs.less
+++ b/source/less/nutrition-programs.less
@@ -14,7 +14,7 @@
   margin: 0;
   margin-bottom: 30px;
   padding-left: 70px;
-  font-family: "Oswald-reg", Arial, sans-serif;
+  font-family: "Oswald-reg", "Arial", sans-serif;
   font-size: 24px;
   line-height: 37px;
   color: @heading-color;
