--- a/source/less/catalog.less
+++ b/source/less/catalog.less
@@ -31,6 +31,7 @@
   font-family: "Oswald-reg", "Arial", sans-serif;
   font-size: 16px;
   line-height: 20px;
+  font-weight: 400;
   color: @heading-color;
   text-transform: uppercase;
 }
@@ -60,6 +61,7 @@
   font-family: "Oswald-reg", "Arial", sans-serif;
   font-size: 16px;
   line-height: 20px;
+  font-weight: 400;
   color: @heading-color;
   text-transform: uppercase;
 }
