--- a/source/less/contacts.less
+++ b/source/less/contacts.less
@@ -13,6 +13,7 @@
   font-family: "Oswald-reg", "Arial", sans-serif;
   font-size: 16px;
   text-transform: uppercase;
+  font-weight: 400;
   color: @heading-color;
 }
 
