--- a/source/less/menu.less
+++ b/source/less/menu.less
@@ -2,6 +2,7 @@
   font-family: "Oswald-med", "Arial", sans-serif;
   font-size: 20px;
   line-height: 20px;
+  font-weight: medium;
   color: @heading-color;
   text-transform: uppercase;
 }
