--- a/source/less/nutrition-programs.less
+++ b/source/less/nutrition-programs.less
@@ -17,6 +17,7 @@
   font-family: "Oswald-reg", "Arial", sans-serif;
   font-size: 24px;
   line-height: 37px;
+  font-weight: 400;
   color: @heading-color;
   text-transform: uppercase;
 }
