--- a/source/less/section-title.less
+++ b/source/less/section-title.less
@@ -2,5 +2,6 @@
   font-family: "Oswald-reg", "Arial", sans-serif;
   font-size: 36px;
   line-height: 60px;
+  font-weight: 400;
   color: @heading-color;
 }
