--- a/source/less/style.less
+++ b/source/less/style.less
@@ -8,9 +8,13 @@
 @import "nutrition-programs.less";
 @import "usage.less";
 @import "section-title.less";
+@import "example.less";
 @import "contacts.less";
 @import "page-footer.less";
 @import "catalog.less";
+@import "extra-goods.less";
+@import "stock.less";
+@import "program-selection.less";
 
 //шрифты
 @font-face {
@@ -28,6 +32,8 @@
 }
 
 body {
+  margin: 0;
+  padding: 0;
   font-family: "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
