Добавлена пустая строка и пропущеная точка с запятой

--- a/source/less/program-selection.less
+++ b/source/less/program-selection.less
@@ -44,7 +44,7 @@
   box-sizing: border-box;
 
   &:hover {
-    border-color: rgba(205, 205, 205, 1)
+    border-color: rgba(205, 205, 205, 1);
   }
 
   &:active,
