--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -6,3 +6,7 @@
 @main-text-color: #444444;
 @secondary-text-color: #ffffff;
 @main-color-hover: #5eaa2f;
+
+//размеры экрана
+@tablet-screen: 768px;
+@desktop-screen: 1440px;
