Добавлен медиа-запрос блоку меню для изменения параметров шрифта при переходе к планшету

--- a/source/less/menu.less
+++ b/source/less/menu.less
@@ -6,3 +6,12 @@
   color: @heading-color;
   text-transform: uppercase;
 }
+
+@media (min-width: @tablet-screen) {
+  .menu {
+    font-family: "Oswald-reg", "Arial", sans-serif;
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 400;
+  }
+}
