Удален временный цвет навигации, добавлена ширина меню для десктопа

--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -110,9 +110,9 @@
   .page-header__logo-img {
     width: 202px;
   }
-  
-  .page-header__site-nav {
-    background-color: @main-color; //временно
+    
+  .page-header__nav-list {
+    width: 480px;
   }
   
   .page-header__menu-link {
