--- a/source/less/style.less
+++ b/source/less/style.less
@@ -41,3 +41,8 @@ body {
   text-align: left;
   background-color: #ffffff;
 }
+
+@media (min-width: @tablet-screen) {
+  font-size: 16px;
+  line-height: 24px;
+}
