--- a/source/less/promo.less
+++ b/source/less/promo.less
@@ -55,6 +55,7 @@
   .promo {
     min-height: 790px;
     padding-top: 60px;
+    margin-bottom: 0;
     background-color: #ffffff;
     background-image: url("../img/index-can-tablet@1x.jpg");
     background-repeat: no-repeat;
@@ -103,6 +104,7 @@
   .promo {
     min-height: 456px;
     margin-top: -116px;
+    margin-bottom: 80px;
     padding-top: 220px;
     background-image: 
       url("../img/index-can-desktop@1x.png"),
@@ -125,4 +127,5 @@
   }
   .promo__intro {
     margin-bottom: 50px;
+  }
 }
