Содержимое кнопки выровнено по центру; уменьшены поля при переходе на планшет

--- a/source/less/btn.less
+++ b/source/less/btn.less
@@ -5,6 +5,7 @@
   font-family: "Oswald-reg", "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
+  text-align: center;
   color: @secondary-text-color;
   text-transform: uppercase;
   text-decoration: none;
@@ -39,7 +40,7 @@
 
 @media (min-width: @tablet-screen) {
   .btn {
-    padding: 16px;
+    padding: 10px;
     font-size: 20px;
     line-height: 20px;
   }
