--- a/source/less/catalog.less
+++ b/source/less/catalog.less
@@ -174,6 +174,7 @@
   }
   
   .catalog__product-btn {
+    padding: 10px;
     width: 250px;
   }
   
@@ -192,6 +193,10 @@
   
   .catalog__more-goods-description {
     font-size: 16px;
+  }
+  
+  .catalog__more-goods-btn {
+    padding: 10px;
   }
 }
 
