Импортирован файл блока -слайдер-

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -9,6 +9,7 @@
 @import "usage.less";
 @import "section-title.less";
 @import "example.less";
+@import "slider.less";
 @import "contacts.less";
 @import "page-footer.less";
 @import "catalog.less";
@@ -43,6 +44,8 @@ body {
 }
 
 @media (min-width: @tablet-screen) {
-  font-size: 16px;
-  line-height: 24px;
+  body {
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
