--- a/source/less/contacts.less
+++ b/source/less/contacts.less
@@ -1,7 +1,14 @@
 .contacts {
-  padding: 29px 0 24px;
-  background-color: #ffffff;
   line-height: 20px;
+}
+
+.contacts__info {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 25px 20px;
+  background-color: #ffffff;
+  box-sizing: border-box;
 
   &--grey {
     background-color: @secondary-color;
@@ -9,6 +16,9 @@
 }
 
 .contacts__title {
+  display: flex;
+  flex-shrink: 0;
+  width: 125px;
   margin: 0;
   font-family: "Oswald-reg", "Arial", sans-serif;
   font-size: 16px;
@@ -17,6 +27,58 @@
   color: @heading-color;
 }
 
-.contacts__info {
+.contacts__address {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 140px;
   margin: 0;
+}
+
+.contacts__map {
+  display: block;
+  width: 100%;
+  height: 363px;
+}
+
+
+@media (min-width: @tablet-screen) {
+  .contacts__info {
+    padding: 64px 70px;
+  }
+
+  .contacts__title {
+    width: 160px;
+    font-size: 20px;
+    line-height: 25px;
+  }
+
+  .contacts__address {
+    width: 155px;
+  }
+
+  .contacts__map {
+    width: 397px;
+  }
+}
+
+@media (min-width: @desktop-screen) {
+  .contacts {
+    position: relative;
+    z-index: 1;
+  }
+
+  .contacts__info {
+    position: absolute;
+    top: 95px;
+    left: 8%;
+    z-index: 5;
+    width: 570px;
+    padding-left: 78px;
+    padding-right: 78px;
+  }
+
+  .contacts__map {
+    height: 403px;
+  }
 }
