Добавлен размер для фонового изображения с котом

--- a/source/less/promo.less
+++ b/source/less/promo.less
@@ -115,11 +115,15 @@
     background-position:
       63% 144px,
       100% 0;
+    background-size:
+      auto,
+      50%;
   }
 
   .promo__wrapper {
     width: 1220px;
     padding-left: 82px;
+    box-sizing: border-box;
   }
 
   .promo__title {
