Изменен размер шрифта кнопок в слайдере при переходе на планшет

--- a/source/less/slider.less
+++ b/source/less/slider.less
@@ -40,6 +40,7 @@
   .slider__btn {
     padding: 4px 0;
     border-bottom: 1px dotted #bebebe;
+    font-size: 20px;
 
     &:hover {
       border-bottom: 1px solid #989898;
