--- a/source/less/contacts.less
+++ b/source/less/contacts.less
@@ -68,11 +68,17 @@
 }
 
 @media (min-width: @desktop-screen) {
-  .contacts__info-wrapper {
+  .contacts {
     position: relative;
+  }
+
+  .contacts__info-wrapper {
+    position: absolute;
+    left: 0;
+    right: 0;
     z-index: 1;
     width: 1220px;
-    height: 100%;
+    height: 403px;
   }
 
   .contacts__info {
