--- a/source/less/page-footer.less
+++ b/source/less/page-footer.less
@@ -11,15 +11,27 @@
 
 .page-footer__logo {
   display: block;
+  width: 128px;
+  height: auto;
   padding: 35px 0;
   border-bottom: 1px solid #d9d9d9;
   text-align: center;
+}
+
+.page-footer__logo[href]:hover img,
+.page-footer__logo[href]:focus img {
+  opacity: 0.8;
+}
+
+.page-footer__logo[href]:active img {
+  opacity: 0.6;
 }
 
 .page-footer__logo-img {
   display: block;
   width: 128px;
   height: 24px;
+  margin: 0 auto;
 }
 
 .page-footer__social-list {
@@ -28,28 +40,55 @@
   align-items: center;
   width: 100%;
   margin: 0;
-  padding: 15px;
+  padding: 20px;
   list-style: none;
   border-bottom: 1px solid #d9d9d9;
+  box-sizing: border-box;
 }
 
 .page-footer__social-btn {
-  display: block;
-  width: 32px;
-  height: 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 22px;
+  height: 22px;
+  margin: 0 17px;
+
+  &:hover path,
+  &:hover circle,
+  &:focus path,
+  &:focus circle {
+    fill: @main-color;
+  }
+
+  &:active path,
+  &:active circle {
+    fill: rgba(@main-color, 0.3);
+  }
 }
 
 .page-footer__copyright-link {
-  display: block;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   width: 100%;
-  padding: 30px 0;
+  padding: 22px 0;
   font-size: 16px;
   line-height: 16px;
   color: @main-text-color;
   text-decoration: none;
 
+  &:hover path,
+  &:focus path {
+    fill: @main-color;
+  }
+
   &:active {
     color: rgba(@main-text-color, 0.3);
+  }
+
+  &:active path {
+    fill: rgba(@main-color, 0.3);
   }
 }
 
@@ -72,6 +111,10 @@
     border-bottom: none;
   }
 
+  .page-footer__social-btn {
+    margin: 0 13px;
+  }
+
   .page-footer__logo {
     width: 132px;
   }
@@ -83,7 +126,7 @@
 
   .page-footer__copyright-link {
     flex-shrink: 0;
-    width: 164px;
+    width: 162px;
     padding: 0;
   }
 }
