--- a/source/less/page-footer.less
+++ b/source/less/page-footer.less
@@ -11,7 +11,7 @@
 
 .page-footer__logo {
   display: block;
-  width: 128px;
+  width: 100%;
   height: auto;
   padding: 35px 0;
   border-bottom: 1px solid #d9d9d9;
