--- a/source/less/promo.less
+++ b/source/less/promo.less
@@ -11,11 +11,12 @@
   align-items: center;
   width: 100%;
   margin: 0 auto;
+  box-sizing: border-box;
 }
 
 .promo__text {
   width: 100%;
-  height: 257px;
+  min-height: 247px;
   padding: 29px 20px;
   color: @secondary-text-color;
   background-color: @main-color;
@@ -27,7 +28,7 @@
 
 .promo__title {
   margin: 0;
-  margin-bottom: 20px;
+  margin-bottom: 22px;
   font-size: 36px;
   line-height: 36px;
   font-weight: 400;
@@ -54,7 +55,7 @@
 @media (min-width: @tablet-screen) {
   .promo {
     min-height: 790px;
-    padding-top: 60px;
+    padding-top: 50px;
     margin-bottom: 0;
     background-color: #ffffff;
     background-image: url("../img/index-can-tablet@1x.jpg");
@@ -71,7 +72,7 @@
 
   .promo__text {
     width: 425px;
-    height: auto;
+    min-height: auto;
     padding: 0;
     text-align: left;
     color: @heading-color;
@@ -80,7 +81,7 @@
   }
 
   .promo__title {
-    margin-bottom: 30px;
+    margin-bottom: 40px;
     font-size: 60px;
     line-height: 60px;
   }
@@ -103,7 +104,7 @@
 @media (min-width: @desktop-screen) {
   .promo {
     min-height: 456px;
-    margin-top: -116px;
+    margin-top: -120px;
     margin-bottom: 80px;
     padding-top: 220px;
     background-image:
@@ -113,7 +114,7 @@
       no-repeat,
       no-repeat;
     background-position:
-      63% 144px,
+      63% 142px,
       100% 0;
     background-size:
       auto,
@@ -127,7 +128,7 @@
   }
 
   .promo__title {
-    margin-bottom: 35px;
+    margin-bottom: 45px;
   }
 
   .promo__intro {
