--- a/source/less/contacts.less
+++ b/source/less/contacts.less
@@ -60,10 +60,12 @@
 
   .contacts__address {
     width: 155px;
+    text-align: right;
   }
 
   .contacts__map {
     width: 100%;
+    height: auto;
   }
 }
 
@@ -88,8 +90,12 @@
     z-index: 5;
     width: 570px;
     padding-left: 78px;
-    padding-right: 78px;
+    padding-right: 87px;
     background-color: #ffffff;
+  }
+
+  .contacts__address {
+    text-align: left;
   }
 
   .contacts__map {
